# restaurant-booking-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py  exceptions.py  logger.py
app/models/: models.py
app/routers/: reservation_router.py  table_router.py
app/schemas/: reservation.py  table.py
app/services/: reservation_service.py  table_service.py
app/tests/: conftest.py
app/tests/integration/: test_reservation_router.py  test_table_router.py
app/tests/unit/: test_reservation_service.py  test_table_service.py
migrations/: env.py
migrations/versions/: d4cf9e066f9c_init.py
