[tool.poetry]
name = "restaurant-booking"
version = "0.1.0"
description = "REST API для бронирования столиков в ресторане."
authors = ["Macmillan1411 <macmillantapiwanashe1411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
pydantic = {extras = ["email"], version = "^2.11.2"}
alembic = "^1.15.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
